--- a/index1.html
+++ b/index1.html
@@ -477,7 +477,7 @@ box-sizing: border-box;
   align-items: center;
   justify-content: center;
 }
-h1{
+.main h1{
   font-size: 50px;
   color: white;
   text-shadow: 2px 2px 5px rgb(185, 74, 14);
