--- a/index1.html
+++ b/index1.html
@@ -482,6 +482,14 @@ box-sizing: border-box;
   color: white;
   text-shadow: 2px 2px 5px rgb(185, 74, 14);
 }
+    h5{
+         color: white;
+    padding-bottom: 20px;
+    padding: 40px;
+    font-family: "New Rocker", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    }
 
 .footer {
   font-family: acumin-pro, system-ui, sans-serif;
